[package]
name = "mji"
description = "A tool for easily creating git commit messages using gitmoji"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
license = "MIT"
# license-file = "./LICENSE"
readme = "README.md"
repository = "https://github.com/unlink2/mji"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
console = "0.15.2"
lazy_static = "1.4.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
thiserror = "1.0.38"
