[package]
name = "mji"
description = "A tool for easily creating git commit messages using gitmoji"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
license = "MIT"
# license-file = "./LICENSE"
readme = "README.md"
repository = "https://github.com/unlink2/mji"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
console = "0.15.2"
dirs = "4.0.0"
lazy_static = "1.4.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
toml = "0.5.10"
